--- a/compose/ui/ui/samples/build.gradle
+++ b/compose/ui/ui/samples/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     compileOnly(project(":annotation:annotation-sampled"))
 
-    implementation("androidx.compose.animation:animation-core:1.0.0")
+    implementation(project(":compose:animation:animation-core"))
     implementation("androidx.compose.foundation:foundation-layout:1.0.0")
     implementation("androidx.compose.material:material:1.0.0")
     implementation(project(":compose:runtime:runtime"))
