--- a/camera/camera-camera2/build.gradle
+++ b/camera/camera-camera2/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     testImplementation(libs.mockitoCore)
     testImplementation(libs.kotlinCoroutinesTest)
     testImplementation("androidx.annotation:annotation-experimental:1.1.0")
+    testImplementation("androidx.concurrent:concurrent-futures-ktx:1.1.0")
     testImplementation("androidx.lifecycle:lifecycle-runtime-testing:2.3.1")
     testImplementation(project(":camera:camera-testing"))
     testImplementation("androidx.arch.core:core-testing:2.1.0")
+    testImplementation("junit:junit:4.13") // Needed for Assert.assertThrows
     testImplementation("org.apache.maven:maven-ant-tasks:2.1.3")
 
     androidTestImplementation(libs.multidex)
