--- a/glance/glance-appwidget/build.gradle
+++ b/glance/glance-appwidget/build.gradle
@@ -16,7 +16,6 @@
 
 
 import androidx.build.AndroidXComposePlugin
-import androidx.build.BundleInsideHelper
 import androidx.build.LibraryGroups
 import androidx.build.LibraryType
 import androidx.build.Publish
@@ -26,6 +25,7 @@ plugins {
     id("AndroidXPlugin")
     id("com.android.library")
     id("AndroidXComposePlugin")
+    id("com.google.protobuf")
 }
 
 // Disable multi-platform; this will only be used on Android.
@@ -40,13 +40,13 @@ dependencies {
     api("androidx.compose.ui:ui-graphics:1.1.0-beta01")
     api("androidx.compose.ui:ui-unit:1.1.0-beta01")
 
-    implementation project(path: ':annotation:annotation')
     implementation project(path: ':core:core-remoteviews')
     implementation project(path: ':core:core-ktx')
     implementation project(path: ':datastore:datastore-core')
     implementation project(path: ':datastore:datastore')
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
     implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation(project(":glance:glance-appwidget-proto"))
     implementation(libs.kotlinStdlib)
 
     testImplementation(project(":core:core-ktx"))
