--- a/settings.gradle
+++ b/settings.gradle
@@ -480,6 +480,7 @@ includeProject(":fragment:fragment-truth", "fragment/fragment-truth", [BuildType
 includeProject(":fragment:integration-tests:testapp", "fragment/integration-tests/testapp", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":glance:glance", "glance/glance", [BuildType.MAIN])
 includeProject(":glance:glance-appwidget", "glance/glance-appwidget", [BuildType.MAIN])
+includeProject(":glance:glance-appwidget-proto", "glance/glance-appwidget-proto", [BuildType.MAIN])
 includeProject(":glance:glance-appwidget:integration-tests:demos", "glance/glance-appwidget/integration-tests/demos", [BuildType.MAIN])
 includeProject(":glance:glance-appwidget:glance-layout-generator", "glance/glance-appwidget/glance-layout-generator", [BuildType.MAIN])
 includeProject(":glance:glance-wear", "glance/glance-wear", [BuildType.MAIN])
