--- a/settings.gradle
+++ b/settings.gradle
@@ -746,7 +746,7 @@ includeProject(":webkit:webkit", "webkit/webkit", [BuildType.MAIN])
 includeProject(":window:window", "window/window", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":window:extensions:extensions", "window/extensions/extensions", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":window:sidecar:sidecar", "window/sidecar/sidecar", [BuildType.MAIN, BuildType.FLAN])
-includeProject(":window:window-java", "window/window-java", [BuildType.MAIN])
+includeProject(":window:window-java", "window/window-java", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":window:window-rxjava2", "window/window-rxjava2", [BuildType.MAIN])
 includeProject(":window:window-rxjava3", "window/window-rxjava3", [BuildType.MAIN])
 includeProject(":window:window-samples", "window/window-samples", [BuildType.MAIN, BuildType.FLAN])
