--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -124,9 +124,9 @@ dependencies {
     docs("androidx.enterprise:enterprise-feedback:1.1.0")
     docs("androidx.enterprise:enterprise-feedback-testing:1.1.0")
     docs("androidx.exifinterface:exifinterface:1.3.3")
-    docs("androidx.fragment:fragment:1.4.0-rc01")
-    docs("androidx.fragment:fragment-ktx:1.4.0-rc01")
-    docs("androidx.fragment:fragment-testing:1.4.0-rc01")
+    docs("androidx.fragment:fragment:1.4.0")
+    docs("androidx.fragment:fragment-ktx:1.4.0")
+    docs("androidx.fragment:fragment-testing:1.4.0")
     docs("androidx.gridlayout:gridlayout:1.0.0")
     docs("androidx.health:health-services-client:1.0.0-alpha03")
     docs("androidx.heifwriter:heifwriter:1.1.0-alpha01")
