--- a/hilt/hilt-navigation-compose/build.gradle
+++ b/hilt/hilt-navigation-compose/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     api("androidx.hilt:hilt-navigation:1.0.0")
     api("androidx.compose.runtime:runtime:1.0.1")
     api("androidx.compose.ui:ui:1.0.1")
-    api("androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07")
+    api("androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0")
     api(projectOrArtifact(":navigation:navigation-compose"))
 
     androidTestImplementation(libs.testExtJunit)
